service: Don't hang during shutdown

Remember whether a signal was signalled to dconf-service
so we don't call g_application_release() more than once.

https://bugzilla.gnome.org/show_bug.cgi?id=727549